# totobackend

./: .black  .coverage  .env.example  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  env.example  manage.py  phase1.md  phase1_core_infrastructure.md  phase2_learning_system.md  phase3_social_features.md  project.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yml
.github/workflows/: ci-cd.yml
apps/content/: admin.py  models.py  tests.py  urls.py
apps/content/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
config/: settings.py  urls.py
config/settings/: base.py  development.py  production.py
core/: models.py  serializers.py  services.py  urls.py  views.py
core/migrations/: 0001_initial.py
docs/: pre-commit-setup.md
homestay/: apps.py  models.py  serializers.py  urls.py  views.py
monitoring/: prometheus.yml
nginx/: nginx.conf  nginx.production.conf
scripts/: backup.sh  deploy.sh  restore.sh
student/: models.py  serializers.py  urls.py  views.py
teacher/: models.py  serializers.py  urls.py  views.py
toto/: asgi.py  settings.py  urls.py  wsgi.py
totobackend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
