[project]
name = "totobackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "django>=5.2.6",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.8.0",
    "django-filter>=25.1",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.10",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "redis>=6.4.0",
]
