[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "totobackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery==5.3.4",
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "django==5.2.6",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.8.0",
    "django-filter==23.5",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.3.0",
    "drf-yasg==1.21.10",
    "gunicorn==21.2.0",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "python-dotenv>=1.1.1",
    "redis==6.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "coverage>=7.0.0",
    "locust>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]
exclude = [
    "monitoring*",
    "nginx*",
    "static*",
    "templates*",
    "logs*",
    "media*",
    "scripts*",
]
